possible tina admin

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nunjucks": "^3.2.4",
     "sass": "^1.79.4",
     "tinacms": "^2.2.8",
-    "tinacms-authjs": "^5.0.8"
+    "tinacms-authjs": "^5.0.8",
+    "tinacms-gitprovider-github": "^2.0.4"
   },
   "engines": {
     "node": ">=18.0.0"
