--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@tinacms/datalayer": "^1.3.4",
     "@upstash/redis": "^1.34.2",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
     "next-auth": "^4.24.8",
     "nunjucks": "^3.2.4",
-    "redis": "^4.7.0",
     "sass": "^1.79.4",
     "tinacms": "^2.2.8",
     "tinacms-authjs": "^5.0.8",
