--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,9 @@
   "rewrites": [
     {
       "source": "/api/tina/:path*",
-      "destination": "/api/tina/backend"
+      "destination": "/api/tina/backend",
+      "cleanUrls": true,
+      "trailingSlash": false
     }
   ]
 }
